
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int rd ;


 int checkData (int) ;
 int close (int) ;
 int connect_and_version () ;
 int get (int) ;
 int login (int) ;
 int send (int,int*,int,int ) ;

int checkVuln() {
int s,rd;

s = connect_and_version();
login(s);
get(s);


rd = -1;
send(s,&rd,sizeof(rd),0);





if(!checkData(s))
return 1;

close(s);
return 0;
}
