; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21242.c_checkVuln.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21242.c_checkVuln.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @checkVuln() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 (...) @connect_and_version()
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @login(i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @get(i32 %7)
  store i32 -1, i32* %3, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @send(i32 %9, i32* %3, i32 4, i32 0)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @checkData(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %0
  store i32 1, i32* %1, align 4
  br label %18

15:                                               ; preds = %0
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @close(i32 %16)
  store i32 0, i32* %1, align 4
  br label %18

18:                                               ; preds = %15, %14
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @connect_and_version(...) #1

declare dso_local i32 @login(i32) #1

declare dso_local i32 @get(i32) #1

declare dso_local i32 @send(i32, i32*, i32, i32) #1

declare dso_local i32 @checkData(i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
